--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -69,5 +69,19 @@
 <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=6384c931233b3c001362c788&product=inline-share-buttons' async='async' defer>
 </script>
 
+
+<!--onerr -->
+<script>
+function images2Function() {
+  document.getElementById("status").innerHTML = "<div role="status" class="space-y-8 animate-pulse md:space-y-0 md:space-x-8 md:flex md:items-center">
+	<div class="flex items-center justify-center w-96 h-96 ml-16 mt-3 bg-gray-300 rounded sm:w-96 dark:bg-gray-700">
+	<div class="px-3 py-1 text-xs font-medium leading-none text-center text-blue-800 bg-blue-200 rounded-full  dark:bg-blue-900 dark:text-blue-200">ürün görseli yeniden işleniyor, birazdan hazır olur...</div>
+	</div>";
+}
+</script>
+
+
+
+
 </body>
 </html>
