--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -2,7 +2,9 @@
 <header class="section-header">
 <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom pl-1 flex"><!-- iletisim -->
   <div class="navbar-collapse mx-auto justify-end">
-    <ul class="navbar-nav mr-auto"></ul>
+    <ul class="navbar-nav mr-auto">
+<img style="height:50px; width:50px;" class="ml-40 mt-1" src="/static/images/siyah-kurdele.png">
+    </ul>
 {% for ayarlar in ayarlar %}
   <span><svg viewBox="0 0 24 24" width="16" height="20" stroke="blacka" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline fill-black"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
       <a href="https://wa.me/905451973471" target="_blank"> {{ ayarlar.telefon }}</a>&nbsp;&nbsp;</span>
@@ -19,6 +21,7 @@
 <!-- özel günler için>
 <div class="col-lg col-sm col-md flex-grow-0"><img class="logo" src="{% static 'images/ozel_gunler.png' %}"></div>
 <!-->
+
   <div class="flex justify-center col-lg col-sm col-md col-4 flex-grow-0"><!-- anasayfa buton -->
     <div class="category-wrap dropdown d-inline-block float-right">
 <a href="{% url 'home' %}" class="btn btn-outline-primary hover:bg-blue-600 -ml-3">Anasayfa</a>
