--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -38,7 +38,7 @@
 <center>
 						{% if single_product.webp %}
 	<img src="{{ single_product.webp.url }}" alt="ürün resmi" style="height:360px;"
-	class="filter grayscale hover:grayscale-0 transition-all duration-300"> </img>
+	class="filter grayscale hover:grayscale-0 transition-all duration-300" draggable="false" oncontextmenu="return false"> </img>
 						{% endif %}
 </center>
 	</div>
@@ -89,7 +89,7 @@ Satıştan Kaldırıldığı Tarih:
 		         <!-- Item 1 -->
 		        <div class="hidden duration-700 ease-in-out" data-carousel-item>
 														{% if single_product.webp and single_product.images %}
-		            <img src="{{single_product.webp.url}}" class="rounded" alt="ürün resmi yüklenmeyi bekliyor" style="height:360px;" onerror="this.onerror=null;this.src='{% static 'images/isleniyor.gif' %}'"></img>
+		            <img src="{{single_product.webp.url}}" class="rounded" alt="ürün resmi yüklenmeyi bekliyor" style="height:360px;" onerror="this.onerror=null;this.src='{% static 'images/isleniyor.gif' %}'" draggable="false" oncontextmenu="return false"></img>
 																<a href="{{single_product.images.url}}" target="_blank" class="-mt-8 -ml-1"><button type="button" class="px-1 py-1 text-sm ml-3 mt-1 text-white/70 btn bg-black/70 hover:bg-white/30"><svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="4" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1 inline -mt-1"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg> detaylı görmek için tıkla</button></a>
 														{% else %}
 														<div role="status" class=" animate-pulse ">
@@ -101,7 +101,7 @@ Satıştan Kaldırıldığı Tarih:
 		        <!-- Item 2 -->
 		        <div class="hidden duration-700 ease-in-out" data-carousel-item>
 									{% if single_product.webp2 %}
-		            <img src="{{single_product.webp2.url}}" class="rounded" alt="ürün resmi yüklenmeyi bekliyor" style="height:360px;" onerror="this.onerror=null;this.src='{% static 'images/isleniyor.gif' %}'"></img>
+		            <img src="{{single_product.webp2.url}}" class="rounded" alt="ürün resmi yüklenmeyi bekliyor" style="height:360px;" onerror="this.onerror=null;this.src='{% static 'images/isleniyor.gif' %}'" draggable="false" oncontextmenu="false"></img>
 								{% else %}
 								<div role="status" class="space-y-8 animate-pulse md:space-y-0 md:space-x-8 md:flex md:items-center">
 <div class="flex items-center justify-center w-96 h-96 ml-16 mt-3 bg-gray-300 rounded sm:w-96 dark:bg-gray-700">
@@ -128,8 +128,8 @@ Satıştan Kaldırıldığı Tarih:
 		        </span>
 		    </button>
 				<div class=" z-30  ml-32 mt-7 flex space-x-3  bottom-5 left-1/2">
-								<img src="{{single_product.webp.url}}" style="height:70px; width:70px;" class="inline rounded-lg -ml-32 hover:cursor-pointer" alt="ürün resmi yüklenmeyi bekliyor" onerror="this.onerror=null;this.src='{% static 'images/isleniyor.gif' %}'" aria-current="false" aria-label="Slide 1" data-carousel-slide-to="0"></img>
-								<img src="{{single_product.webp2.url}}" style="height:70px; width:70px;" class="inline rounded-lg -ml-32 hover:cursor-pointer" alt="ürün resmi yüklenmeyi bekliyor" onerror="this.onerror=null;this.src='{% static 'images/isleniyor.gif' %}'" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></img>
+								<img src="{{single_product.webp.url}}" style="height:70px; width:70px;" class="inline rounded-lg -ml-32 hover:cursor-pointer" alt="ürün resmi yüklenmeyi bekliyor" onerror="this.onerror=null;this.src='{% static 'images/isleniyor.gif' %}'" aria-current="false" aria-label="Slide 1" data-carousel-slide-to="0" draggable="false" oncontextmenu="return false"></img>
+								<img src="{{single_product.webp2.url}}" style="height:70px; width:70px;" class="inline rounded-lg -ml-32 hover:cursor-pointer" alt="ürün resmi yüklenmeyi bekliyor" onerror="this.onerror=null;this.src='{% static 'images/isleniyor.gif' %}'" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1" draggable="false" oncontextmenu="return false"></img>
 		    </div>
 				{% endif %}
 		</div>
