--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 <meta http-equiv="cache-control" content="max-age=31536000" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>{% block title %}{% endblock %}</title>
-<meta name="description" content="{% block description %}Engin Elektronik tv satış-tamiri, tv kart satış-tamiri, kumanda satış-tamiri, tv ayak satış, 2.el tv satış, tv kablo satış, uydu alıcısı satış, android box satış, hoparlör tamirinin yapıldığı yer{% endblock %}" />
+<meta name="description" content="{% block description %}tv 2.el satış, tv tamir, tv kart satış-tamir, kumanda satış-tamir, tv ayak satış, tv kablo satış, uydu alıcısı satış, android box satışın yapıldığı yer{% endblock %}" />
 <meta name="keywords" content="{% block keywords %}engin elektronik{% endblock %}" />
 <meta name="googlebot" content="all" />
 <meta name="google-site-verification" content="6L2RD__lUdlr8X2lTzgKzJfS6nDDCbCe6DoskQGwL1c" />
@@ -21,13 +21,12 @@
 <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript" async></script>
 <!-- bootstrap css -->
 <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
-<!-- tailwindcss -->
+<!-- tailwind-flowbite -->
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
-
 <!-- Font awesome 5 -->
 <link href="{% static 'fonts/fontawesome/css/all.css' %}" type="text/css" rel="stylesheet" />
-<!-- custom-responsive-ui css -->
+<!-- responsive-ui-custom css -->
 <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
 <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css" />
