--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
-{% block description %}Engin Elektronik tv satış-tamiri, tv kart satış-tamiri, kumanda satış-tamiri, tv ayak satış, 2.el tv satış, tv kablo satış, uydu alıcısı satış, android box satış, hoparlör tamirinin yapıldığı yer{% endblock %}
+{% block description %}tv 2.el satış, tv tamir, tv kart satış-tamir, kumanda satış-tamir, tv ayak satış, tv kablo satış, uydu alıcısı satış, android box satışın yapıldığı yer{% endblock %}
 {% block keywords %}engin elektronik{% endblock %}
-{% block title %}Engin Elektronik Tv.Hastanesi {% endblock %}
+{% block title %}Engin Elektronik Tv.Hastanesi{% endblock %}
 {% block content %}
 <section class="section-pagetop bg-zinc-100 mt-3"> <!-- section -->
 <div class="container"><!-- container -->
