--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -24,7 +24,7 @@
 
   <div class="flex justify-center col-lg col-sm col-md col-4 flex-grow-0"><!-- anasayfa buton -->
     <div class="category-wrap dropdown d-inline-block float-right">
-<a href="{% url 'home' %}" class="btn btn-outline-primary hover:bg-blue-600 -ml-3" id="anasayfa">Anasayfa</a>
+<a href="{% url 'home' %}" class="btn btn-outline-primary hover:bg-blue-600 -ml-3">Anasayfa</a>
     </div>
   </div> <!-- anasayfa buton// -->
 
