--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -111,8 +111,8 @@ Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outl
 <div class="container">
 <div class="row">
 
-	<aside class="col-md-3 md:flex" style="margin-left: -15px;">
-<div class="flex card w-72 rounded-xl border-8 border-white mt-2" style="height:1200px;">
+	<aside class="col-md-3 md:flex lg:flex" style="margin-left: -15px;">
+<div class="flex card w-72 rounded-xl border-8 border-white mt-2" style="height:1210px;">
 	<article class="filter-group">
 		<header class="card-header">
 			<i class="icon-control fa fa-list"></i>
