--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
 <div class="container"><!-- container -->
 	<div class="row"> <!-- row -->
 
-		<aside class="col-md-3 md:flex" style="margin-left: -15px;"> <!-- sol kategori -->
-			<div class="flex card w-72 rounded-xl border-8 border-white mt-2" style="height:1200px;">
+		<aside class="col-md-3 md:flex lg:flex" style="margin-left: -15px;"> <!-- sol kategori -->
+			<div class="flex card w-72 rounded-xl border-8 border-white mt-2" style="height:1210px;">
 				<article class="filter-group">
 					<header class="card-header">
 						<i class="icon-control fa fa-list"></i>
