--- a/templates/list.html
+++ b/templates/list.html
@@ -2,13 +2,12 @@
 <div class="row sagsol" style="margin-top: 8px;"> <!-- ürünler -->
 	{% if products %}
 	{% for product in products %}
-	<div class="col-md-4 bg-zinc-100">
+	<div class="col-md-4 bg-zinc-50">
 		<figure class="card card-product-grid rounded-lg border-0">
 			<div class="img-wrap absolute hover:-translate-y-2.5 duration-1000">
 				<a href="{{ product.get_absolute_url }}">
 					<img class="rounded" src="{{ product.webp.url }}" alt="{{ product.product_name }}" onerror="this.onerror=null;this.src='{% static 'images/isleniyor.gif' %}'" />
 				</a>
-				<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
 				{% if product.yeni %}
 <span class="badge  badge-danger badge-yeni" style="font-size:11px; margin-left: 243px; margin-top:-3px">&nbsp;{{product.yeni}}&nbsp;</span>
 				{% endif %}
@@ -17,14 +16,15 @@
 				<div class="fix-height">
 					<div style="margin-left: -5px; margin-top: 215px;" class="badge badge-pill badge-light hover:bg-gray-300">
 					<a href="{{ product.category.get_url }}" target="_blank" class="font-semibold hover:text-gray-700 break-all">{{ product.category }}</a>
+					<span class="badge badge-pill badge-light inline" style="font-size:11px; margin-left:230px; margin-top:-10px">{{product.stock}} Adet</span>
 					</div>
 					<a href="{{ product.get_absolute_url }}" target="_blank" class="title mt-4">{{ product.product_name }}</a>
 				</div>
 							</figcaption>
 							<div class="col">
-				<span class="price" style="margin-right: 70px;">{{product.price}} ₺</span>
-				<a href="{{ product.get_absolute_url }}" class="btn btn-primary" style="width: 120px; margin-bottom: 5px;">İncele</a>
-						</div>
+				<span class="price text-lg" style="margin-right: 70px;">{{ product.price }}&nbsp;</span>
+				<span style="margin-left:-78px">₺</span>
+	</div>
 		</figure>
 	</div>
 	{% endfor %}
