--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -29,15 +29,21 @@ Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outl
 	<!--	 {{ myFilter.form.brand }} -->
 	<select name="brand" id="id_brand" class="bg-zinc-100 rounded h-6 ml-1">
 		<option value="" selected=""></option>
+<option value="Acer">acer</option>
 <option value="Arçelik-Beko-Grundig">arçelik-beko-grundig</option>
 <option value="Arçelik-Beko-Grundig-Altus">arcelik-beko-grundig-altus</option>
+<option value="AUO">auo</option>
 <option value="AWOX">awox</option>
 <option value="AXEN">axen</option>
+<option value="BOE">boe</option>
+<option value="CHIMEI">chimei</option>
+<option value="DARFON">darfon</option>
 <option value="Dijitsu">dijitsu</option>
 <option value="Dreamstar">dreamstar</option>
 <option value="GEEPAS">geepas</option>
 <option value="Hisense">hisense</option>
 <option value="Homstar">homstar</option>
+<option value="INNOLUX">innolux</option>
 <option value="LG">lg</option>
 <option value="Lifemaxx">lifemaxx</option>
 <option value="Navitech">navitech</option>
@@ -51,9 +57,11 @@ Filtreye Göre Ara:<button data-popover-target="popover-right" class="focus:outl
 <option value="Profilo">profilo</option>
 <option value="REGAL">regal</option>
 <option value="ROWELL">rowell</option>
+<option value="RONAX">ronax</option>
 <option value="SAMSUNG">samsung</option>
 <option value="SANYO">sanyo</option>
 <option value="SEG">seg</option>
+<option value="SHARP">sharp</option>
 <option value="Skytech">skytech</option>
 <option value="SUNNY">sunny</option>
 <option value="SUNNY-AXEN">sunny-axen</option>
