--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -58,6 +58,9 @@
  <b>Marka:&nbsp;</b>{{ single_product.brand }}<br>
  <b>Durum:&nbsp;</b>{{ single_product.durum }}<br>
  <b>Stok:&nbsp;</b>Yok
+ <br>
+ <b>Ekran:&nbsp;</b>{{ single_product.ekran }}
+ {% endif %}
 </div>
 <b class="text-base text-md">Bu ürün hakkında:</b>
 <span class="text-base">{{ single_product.description | safe }} </span>
