--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block description %}tv 2.el satış, tv tamir, tv kart satış-tamir, kumanda satış-tamir, tv ayak satış, tv kablo satış, uydu alıcısı satış, android box satışın yapıldığı yer{% endblock %}
-{% block keywords %}engin elektronik{% endblock %}
+{% block keywords %}engin elektronik,engin elektronik bağcılar,engin elektronik istanbul{% endblock %}
 {% block title %}Engin Elektronik Tv.Hastanesi{% endblock %}
 {% block content %}
 <section class="section-pagetop bg-zinc-50 mt-3"> <!-- section -->
