--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>{% block title %}{% endblock %}</title>
 <meta name="description" content="{% block description %}tv 2.el satış, tv tamir, tv kart satış-tamir, kumanda satış-tamir, tv ayak satış, tv kablo satış, uydu alıcısı satış, android box satışın yapıldığı yer{% endblock %}" />
-<meta name="keywords" content="{% block keywords %}engin elektronik{% endblock %}" />
+<meta name="keywords" content="{% block keywords %}engin elektronik,engin elektronik bağcılar,engin elektronik istanbul{% endblock %}" />
 <meta name="googlebot" content="all" />
 <meta name="google-site-verification" content="6L2RD__lUdlr8X2lTzgKzJfS6nDDCbCe6DoskQGwL1c" />
 <meta name="referrer" content="unsafe-url" /> <!-- csrf mobil için -->
