--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 <meta name="description" content="{% block description %}tv 2.el satış, tv tamir, tv kart satış-tamir, kumanda satış-tamir, tv ayak satış, tv kablo satış, uydu alıcısı satış, android box satışın yapıldığı yer{% endblock %}" />
 <meta name="keywords" content="{% block keywords %}engin elektronik,engin elektronik bağcılar,engin elektronik istanbul{% endblock %}" />
 <meta name="googlebot" content="all" />
+<meta name="robots" content="all" />
 <meta name="google-site-verification" content="6L2RD__lUdlr8X2lTzgKzJfS6nDDCbCe6DoskQGwL1c" />
 <meta name="referrer" content="unsafe-url" /> <!-- csrf mobil için -->
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon" />
